Finished up mod page

--- a/mods.html
+++ b/mods.html
@@ -4,4 +4,54 @@ layout: page
 permalink: /mods/index.html
 ---
 
-<p>Here is a list of the moderators in the room and how to contact them offline if they want to be contacted offline.</p>
+<p>Here is a list of the moderators in the room and how to contact them offline if they want to be contacted offline. Note: All names are subject to change, but most keep some resemblance of their name.</p>
+
+<h4>Hosts and Co-Hosts</h4>
+<dl>
+	<dt>DJ_Mikeb</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>MixxMastaMike</dt>
+	<dd>Contact off-line: <a href="https://google.com/+MikeWills">+MikeWills</a></dd>
+	<dt>Meesh_ell</dt>
+	<dd>Contact off-line: None</dd>
+</dl>
+
+<h4>Managers</h4>
+<dl>
+	<dt>-King-</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>Chewii</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>VobstahVollz</dt>
+	<dd>Contact off-line: None</dd>
+</dl>
+
+<h4>Bouncers</h4>
+<dl>
+	<dt>AaronTalks</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>Curmudegeon</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>d j</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>DJ Riddlah</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>djdjdjdjdj</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>EnterTheScrub</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>ioyo2i</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>roadwarrior</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>SPPOC</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>Supanova</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>talksick</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>Xoph</dt>
+	<dd>Contact off-line: None</dd>
+	<dt>zakk</dt>
+	<dd>Contact off-line: None</dd>
+</dl>
