Added content to the home page.

--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@ layout: home
 title: Mike Wills
 ---
 
+<p>Welcome All Music Mix regulars, TT refugees, and new users! As always, our core rule is to be nice.</p>
+
+<p>Our rules are pretty simple: </p>
+
+<ul>
+	<li>Please keep all videos safe for work; audio does not need to be censored.</li>
+	<li>Please keep all songs under 8 minutes.</li>
+	<li>We expect you to treat others as you expect to be treated (aka BE NICE).</li>
+</ul>
