Added the url to the room

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ title: Mike Wills
 
 <p>Welcome All Music Mix regulars, TT refugees, and new users! As always, our core rule is to be nice.</p>
 
+<p>You can find us at <a href="http://plug.dj/everything-mix/">plug.dj/everything-mix/</a></p>
+
 <p>Our rules are pretty simple: </p>
 
 <ul>
