Fix homepage name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Home"
 layout: home
-title: Mike Wills
+title: Home
 ---
 
 <p>Welcome All Music Mix regulars, TT refugees, and new users! As always, our core rule is to be nice.</p>
