Added clarity on the SFW rule

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ title: Home
 <p>Our rules are pretty simple: </p>
 
 <ul>
-	<li>Please keep all videos safe for work; audio does not need to be censored.</li>
+	<li>Please keep all videos safe for work *; audio does not need to be censored.</li>
 	<li>Please keep all songs under 8 minutes.</li>
 	<li>We expect you to treat others as you expect to be treated (aka BE NICE).</li>
 </ul>
+
+<p>* We made this rule since many people listen to this site during the day at work. We don't want to get anyone fired because there happens to be a song playing with nudity or sexually explicit content. Please be considerate of this. However, I would hope they are using headphones at work, so the music itself can be as vulgar as you want. :-)</p>
