--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@ title: Home
 
 <p>* We made this rule since many people listen to this site during the day at work. We don't want to get anyone fired because there happens to be a song playing with nudity or sexually explicit content. Please be considerate of this. However, I would hope they are using headphones at work, so the music itself can be as vulgar as you want. :-)</p>
 
-<p>Our <a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a> script. Just drag and drop to your bookmarks. Once the room is loaded, click that link.</p>
+<h4>AutoWoot</h4>
+<p>Our <a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a> script.</p><p>Just drag and drop the above link to your bookmarks. Once the room is loaded, click that link.</p>
