--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@ title: Home
 
 <p>* We made this rule since many people listen to this site during the day at work. We don't want to get anyone fired because there happens to be a song playing with nudity or sexually explicit content. Please be considerate of this. However, I would hope they are using headphones at work, so the music itself can be as vulgar as you want. :-)</p>
 
-<h4>AutoWoot</h4>
-<p>Our <a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a> script.</p><p>Just drag and drop the above link to your bookmarks. Once the room is loaded, click that link.</p>
+<h4>EM's Official AutoWoot Script</h4>
+<p><a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a>.</p>
+<p>Just drag and drop the above link to your bookmarks. Once the room is loaded, click that link.</p>
