Update the Autowoot

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@ title: Home
 <p><small>* We made this rule since many people listen to this site during the day at work. We don't want to get anyone fired because there happens to be a song playing with nudity or sexually explicit content. Please be considerate of this. However, I would hope they are using headphones at work, so the music itself can be as vulgar as you want. :-)</small></p>
 
 <h4>EM's Official AutoWoot Script</h4>
-<p><a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a>.</p>
+<p>Chrome: <a href="javascript:$.getScript('http://everythingmix.github.io/js/autowoot.js');">AutoWoot</a>.</p>
+<p>Firefox: <a href="javascript:(function(){$('body').append('<script%20src=\'http://everythingmix.github.io/js/autowoot.js\'></script>');})();">AutoWoot</a></p>
 <p>Just drag and drop the above link to your bookmarks. Once the room is loaded, click that link.</p>
